# interview-tokka

./: .gitignore  .pre-commit-config.yaml  README.md  backend-start.sh  backend.Dockerfile  docker-compose.yml  openapi.json  pyproject.toml  worker-start.sh  worker.Dockerfile
src/: config.py  models.py
src/alembic/: main.py
src/api/: main.py  router.py
src/asset_price_client/: asset_price_client.py  binance_client.py
src/background/: main.py  tasks.py
src/clients/binance/: binance_client.py
src/clients/etherscan/: client.py  value_objects.py
src/clients/infura/: client.py
src/core/: value_objects.py
src/etherscan/: client.py  value_objects.py
src/services/: asset_price_client.py  batch_fee_service.py  transaction_client.py  transaction_fee_service.py
tests/: test_etherscan_client.py
tests/asset_price_client/: test_binance_client.py
tests/clients/binance/: test_binance_client.py
tests/clients/etherscan/: test_etherscan_client.py
tests/etherscan/: test_etherscan_client.py
tests/services/: test_transaction_fee_service.py
tests/utils/: db.py  helpers.py
