[tool.poetry]
name = "tokka_interview"
version = "0.1.0"
description = "Backend for teching USDT equivalent of transaction fees on Uniswap V3's USDC/WETH pool"
authors = ["Gabriel Frizzo <gabrielfrizzo@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
web3 = "^6.15.1"
fastapi = "^0.110.0"
celery = "^5.3.6"
alembic = "^1.13.1"
gunicorn = "^21.2.0"
psycopg = { version = "^3.1.18", extras = ["binary"] }
binance-connector = "^3.6.0"
uvicorn = "^0.28.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240218"
mypy = "^1.8.0"
ruff = "^0.3.1"
pytest = "^8.0.2"
celery-types = "^0.22.0"
pre-commit = "^3.6.2"

[tool.pytest.ini_options]
pythonpath = ["src", "tests/utils"]
filterwarnings = ["error"]
addopts = ["--import-mode=append"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src:tests"
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
